# mcp-finnhub

./: .mcpbignore  LICENSE  Makefile  README.md  glama.json  manifest.json  mpak.json  pyproject.toml  server.py
.github/workflows/: build-bundle.yml
e2e/: __init__.py  conftest.py  test_e2e_mcpb.py
src/mcp_finnhub/: SKILL.md  __init__.py  server.py
tests/: conftest.py  test_server.py
